--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.13",
     "framer-motion": "^7.6.6",
+    "install": "^0.13.0",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
